Changes for testing in python

--- a/helpers/text.ipynb
+++ b/helpers/text.ipynb
@@ -226,6 +226,53 @@
     "if __name__ == \"__main__\":\n",
     "    main()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def load_matrix(file_path):\n",
+    "    \"\"\"Load a matrix from a text file.\"\"\"\n",
+    "    return np.loadtxt(file_path)\n",
+    "\n",
+    "def check_inverse(matrix_file, inverse_file):\n",
+    "    \"\"\"Check if the matrices in the given files are inverses of each other.\"\"\"\n",
+    "    # Load the matrices\n",
+    "    matrix = load_matrix(matrix_file)\n",
+    "    inverse = load_matrix(inverse_file)\n",
+    "\n",
+    "    # Calculate their product\n",
+    "    product = np.dot(matrix, inverse)\n",
+    "\n",
+    "    # Identity matrix of appropriate size\n",
+    "    identity = np.eye(matrix.shape[0])\n",
+    "\n",
+    "    # Check if the product is close to the identity matrix\n",
+    "    if np.allclose(product, identity):\n",
+    "        print(\"The matrices are inverses of each other.\")\n",
+    "    else:\n",
+    "        print(\"The matrices are NOT inverses. The calculated inverse of the first matrix is:\")\n",
+    "        calculated_inverse = np.linalg.inv(matrix)\n",
+    "        print(calculated_inverse)\n",
+    "\n",
+    "# Specify file paths\n",
+    "matrix_file = \"matrix.txt\"\n",
+    "inverse_file = \"inverse.txt\"\n",
+    "\n",
+    "# Check if the matrices are inverses\n",
+    "check_inverse(matrix_file, inverse_file)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
