--- a/helpers/matrix_generator.ipynb
+++ b/helpers/matrix_generator.ipynb
@@ -2,38 +2,45 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original Matrix:\n",
-      "0.00\t3.00\t2.00\n",
-      "1.00\t0.00\t2.00\n",
-      "0.00\t0.00\t1.00\n",
-      "\n",
-      "Augmented Matrix:\n",
-      "1.00\t0.00\t0.00\t0.00\t1.00\t-2.00\n",
-      "0.00\t1.00\t0.00\t0.33\t0.00\t-0.67\n",
-      "0.00\t0.00\t1.00\t0.00\t0.00\t1.00\n",
-      "\n",
-      "Reduced Row Echelon Form (RREF):\n",
-      "1.00\t0.00\t0.00\t0.00\t1.00\t-2.00\n",
-      "0.00\t1.00\t0.00\t0.33\t0.00\t-0.67\n",
-      "0.00\t0.00\t1.00\t0.00\t0.00\t1.00\n",
-      "\n",
-      "Inverse Matrix:\n",
-      "0.00\t1.00\t-2.00\n",
-      "0.33\t0.00\t-0.67\n",
-      "0.00\t0.00\t1.00\n",
-      "\n"
+      "Matrix of size 100x100 (version 1) saved as matrix_100x100_01.txt.\n",
+      "Matrix of size 90x90 (version 1) saved as matrix_90x90_01.txt.\n",
+      "Matrix of size 80x80 (version 1) saved as matrix_80x80_01.txt.\n",
+      "Matrix of size 70x70 (version 1) saved as matrix_70x70_01.txt.\n",
+      "Matrix of size 60x60 (version 1) saved as matrix_60x60_01.txt.\n",
+      "Matrix of size 50x50 (version 1) saved as matrix_50x50_01.txt.\n",
+      "Matrix of size 40x40 (version 1) saved as matrix_40x40_01.txt.\n",
+      "Matrix of size 30x30 (version 1) saved as matrix_30x30_01.txt.\n",
+      "Matrix of size 20x20 (version 1) saved as matrix_20x20_01.txt.\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
+    "import os\n",
+    "\n",
+    "# Configuration for matrix sizes and versions\n",
+    "matrix_config = [\n",
+    "    (100, 1),\n",
+    "    (90, 1),\n",
+    "    (80, 1),\n",
+    "    (70, 1),\n",
+    "    (60, 1),\n",
+    "    (50, 1),\n",
+    "    (40, 1),\n",
+    "    (30, 1),\n",
+    "    (20, 1)\n",
+    "]\n",
+    "\n",
+    "# Directory to save the matrices\n",
+    "directory = \"../performance_test_matrices\"\n",
+    "os.makedirs(directory, exist_ok=True)\n",
     "\n",
     "def generate_invertible_matrix(size):\n",
     "    while True:\n",
@@ -44,29 +51,21 @@
     "        if np.linalg.det(matrix) != 0:\n",
     "            return matrix\n",
     "\n",
-    "# Size of the matrix\n",
-    "matrix_size = 200\n",
+    "def generate_file_name(size, version):\n",
+    "    return f\"matrix_{size}x{size}_{version:02d}.txt\"\n",
     "\n",
-    "# Generate the invertible matrix\n",
-    "matrix = generate_invertible_matrix(matrix_size)\n",
-    "\n",
-    "# Calculate the inverse\n",
-    "matrix_inverse = np.linalg.inv(matrix)\n",
-    "\n",
-    "# Verify that the inverse is correct\n",
-    "identity_matrix = np.dot(matrix, matrix_inverse)\n",
-    "\n",
-    "# Check if the result is close to the identity matrix\n",
-    "if np.allclose(identity_matrix, np.eye(matrix_size)):\n",
-    "    print(\"The matrix is invertible, and its inverse produces an identity matrix.\")\n",
-    "else:\n",
-    "    print(\"Error: The generated matrix or its inverse is incorrect.\")\n",
-    "\n",
-    "# Optional: Print the matrices for validation\n",
-    "# Uncomment the lines below if needed (not recommended for large matrices due to output size)\n",
-    "print(\"Original Matrix:\\n\", matrix)\n",
-    "# print(\"Inverse Matrix:\\n\", matrix_inverse)\n",
-    "# print(\"Resultant Identity Matrix:\\n\", identity_matrix)\n"
+    "# Iterate over the configuration\n",
+    "for size, version in matrix_config:\n",
+    "    # Generate the invertible matrix\n",
+    "    matrix = generate_invertible_matrix(size)\n",
+    "    \n",
+    "    # Generate the file name\n",
+    "    dynamic_filename = generate_file_name(size, version)\n",
+    "    dynamic_file_path = os.path.join(directory, dynamic_filename)\n",
+    "    \n",
+    "    # Save the matrix in text format\n",
+    "    np.savetxt(dynamic_file_path, matrix, fmt=\"%.6f\")\n",
+    "    print(f\"Matrix of size {size}x{size} (version {version}) saved as {dynamic_filename}.\")\n"
    ]
   }
  ],
