--- a/helpers/matrix_generator.ipynb
+++ b/helpers/matrix_generator.ipynb
@@ -2,22 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/adarshjohny/miniconda3/lib/python3.11/site-packages/numpy/linalg/linalg.py:2180: RuntimeWarning: overflow encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Matrix of size 100x100 (version 1) saved as matrix_100x100_01.txt.\n",
-      "Matrix of size 90x90 (version 1) saved as matrix_90x90_01.txt.\n",
-      "Matrix of size 80x80 (version 1) saved as matrix_80x80_01.txt.\n",
-      "Matrix of size 70x70 (version 1) saved as matrix_70x70_01.txt.\n",
-      "Matrix of size 60x60 (version 1) saved as matrix_60x60_01.txt.\n",
-      "Matrix of size 50x50 (version 1) saved as matrix_50x50_01.txt.\n",
-      "Matrix of size 40x40 (version 1) saved as matrix_40x40_01.txt.\n",
-      "Matrix of size 30x30 (version 1) saved as matrix_30x30_01.txt.\n",
-      "Matrix of size 20x20 (version 1) saved as matrix_20x20_01.txt.\n"
+      "Matrix of size 1000x1000 (version 1) saved as matrix_1000x1000_01.txt.\n",
+      "Matrix of size 900x900 (version 1) saved as matrix_900x900_01.txt.\n",
+      "Matrix of size 800x800 (version 1) saved as matrix_800x800_01.txt.\n",
+      "Matrix of size 700x700 (version 1) saved as matrix_700x700_01.txt.\n",
+      "Matrix of size 600x600 (version 1) saved as matrix_600x600_01.txt.\n",
+      "Matrix of size 500x500 (version 1) saved as matrix_500x500_01.txt.\n",
+      "Matrix of size 400x400 (version 1) saved as matrix_400x400_01.txt.\n",
+      "Matrix of size 300x300 (version 1) saved as matrix_300x300_01.txt.\n",
+      "Matrix of size 200x200 (version 1) saved as matrix_200x200_01.txt.\n"
      ]
     }
    ],
