--- a/test_python/tester.ipynb
+++ b/test_python/tester.ipynb
@@ -2,32 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of Matrix:  90\n",
+      "Shape of Matrix:  50\n",
       "\n",
       "\n",
       "     ========Original Inverse from File======        \n",
       "\n",
       "\n",
-      "[[ 0.00154425 -0.00105653  0.00085195 ... -0.00154072  0.00125822\n",
-      "   0.00064287]\n",
-      " [-0.00461129 -0.00119831 -0.00298775 ...  0.00040649  0.00390521\n",
-      "   0.00206238]\n",
-      " [ 0.00136957  0.00226317  0.00202682 ...  0.00139496  0.00211885\n",
-      "  -0.00065629]\n",
+      "[[ 0.00473841  0.00258477  0.00091507 ...  0.00053793  0.00830255\n",
+      "   0.0071644 ]\n",
+      " [ 0.00275277  0.007837    0.00144428 ... -0.00539843  0.00856031\n",
+      "   0.00646139]\n",
+      " [-0.00783609 -0.00387301 -0.0011332  ...  0.00290338 -0.00504994\n",
+      "  -0.00755107]\n",
       " ...\n",
-      " [ 0.00497445  0.0005395  -0.00228236 ...  0.00503344 -0.00324899\n",
-      "   0.00142962]\n",
-      " [-0.00546089  0.00099643  0.00265626 ... -0.0033076   0.00329613\n",
-      "  -0.00361764]\n",
-      " [ 0.00184747 -0.00085331 -0.00089683 ...  0.00071023 -0.00213333\n",
-      "   0.00178054]]\n",
+      " [ 0.00019665 -0.00365641  0.00215005 ... -0.00234517 -0.00535798\n",
+      "  -0.00330601]\n",
+      " [ 0.00208073  0.0062091   0.00206656 ... -0.00262791  0.00450379\n",
+      "   0.00335637]\n",
+      " [ 0.00357217 -0.00018182  0.00214356 ... -0.00035714  0.00391829\n",
+      "   0.00599803]]\n",
       "\n",
       "\n",
       "****************--- The matrices are inverses of each other. ---****************\n",
@@ -93,9 +93,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'reversible_matrix.txt'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Define the matrix\n",
     "matrix = [[8, 2, 1, 6, 1, 4, 4, 1, 1, 1, 9, 3, 7, 7, 7, 7, 5, 7, 9, 9],\n",
