Changes and new matrices

--- a/test_python/tester.ipynb
+++ b/test_python/tester.ipynb
@@ -126,20 +126,22 @@
     "    # Load the matrices\n",
     "    matrix = load_matrix(matrix_file)\n",
     "    inverse = load_matrix(inverse_file)\n",
+    "    \n",
+    "    print(\"Shape of Matrix: \",matrix.shape[0])\n",
+    "    \n",
     "    calculated_inverse = np.linalg.inv(matrix)\n",
     "    \n",
-    "    print(\"========Original Inverse from File======\")\n",
+    "    print(\"\\n\\n     ========Original Inverse from File======        \\n\\n\")\n",
     "    print(np.round(inverse, 9))\n",
     "    \n",
     "    # Calculate their product\n",
     "    product = np.dot(matrix, inverse)\n",
-    "\n",
     "    # Identity matrix of appropriate size\n",
     "    identity = np.eye(matrix.shape[0])\n",
     "\n",
     "    # Check if the product is close to the identity matrix\n",
     "    if np.allclose(product, identity):\n",
-    "        print(\"The matrices are inverses of each other.\")\n",
+    "        print(\"\\n\\n****************--- The matrices are inverses of each other. ---****************\\n\\n\")\n",
     "    else:\n",
     "        print(\"The matrices are NOT inverses. Calculating the inverse of the first matrix...\\n\")\n",
     "        \n",
