Added comments and readme file

--- a/test_python/tester.ipynb
+++ b/test_python/tester.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## This is the function to test the inverse of the matrix is correct or not. Add the inverse in inverse.txt file and original matrix in matrix.txt in same folder."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -40,11 +47,9 @@
     "import numpy as np\n",
     "\n",
     "def load_matrix(file_path):\n",
-    "    \"\"\"Load a matrix from a text file.\"\"\"\n",
     "    return np.loadtxt(file_path)\n",
     "\n",
     "def check_inverse(matrix_file, inverse_file):\n",
-    "    \"\"\"Check if the matrices in the given files are inverses of each other.\"\"\"\n",
     "    # Load the matrices\n",
     "    matrix = load_matrix(matrix_file)\n",
     "    inverse = load_matrix(inverse_file)\n",
@@ -67,7 +72,6 @@
     "    else:\n",
     "        print(\"The matrices are NOT inverses. Calculating the inverse of the first matrix...\\n\")\n",
     "        \n",
-    "        # Verify using the calculated inverse\n",
     "        calculated_product = np.dot(matrix, calculated_inverse)\n",
     "        if np.allclose(calculated_product, identity):\n",
     "            print(\"The calculated inverse works. The matrices from the files were incorrect.\\n\")\n",
@@ -83,12 +87,18 @@
     "        print(\"\\n========Product of Original Matrix and Calculated Inverse======\")\n",
     "        print(np.round(calculated_product, 3))\n",
     "\n",
-    "# Specify file paths\n",
     "matrix_file = \"matrix.txt\"\n",
     "inverse_file = \"inverse.txt\"\n",
     "\n",
     "# Check if the matrices are inverses\n",
     "check_inverse(matrix_file, inverse_file)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Just to save matrix to file"
    ]
   },
   {
