--- a/helpers/matrix_generator.ipynb
+++ b/helpers/matrix_generator.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## This file will create matrixes that are reversible for testing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -33,8 +40,32 @@
     "import numpy as np\n",
     "import os\n",
     "\n",
-    "# Configuration for matrix sizes and versions\n",
     "matrix_config = [\n",
+    "     (5, 1),\n",
+    "    (8, 1),\n",
+    "    (10, 1),\n",
+    "    (11, 1),\n",
+    "    (12, 1)\n",
+    "    (13, 1),\n",
+    "    (14, 1),\n",
+    "    (15, 1),\n",
+    "    (20, 1),\n",
+    "    (30, 1)\n",
+    "    (40, 1),\n",
+    "    (50, 1),\n",
+    "    (60, 1),\n",
+    "    (70, 1),\n",
+    "    (80, 1),\n",
+    "    (90, 1),\n",
+    "    (100, 1),\n",
+    "    (200, 1),\n",
+    "    (300, 1),\n",
+    "    (400, 1),\n",
+    "    (500, 1),\n",
+    "    (600, 1),\n",
+    "    (700, 1),\n",
+    "    (800, 1),\n",
+    "    (900, 1)\n",
     "    (1000, 1),\n",
     "    (2500, 1),\n",
     "    (1500, 1),\n",
@@ -58,7 +89,6 @@
     "def generate_file_name(size, version):\n",
     "    return f\"matrix_{size}x{size}_{version:02d}.txt\"\n",
     "\n",
-    "# Iterate over the configuration\n",
     "for size, version in matrix_config:\n",
     "    # Generate the invertible matrix\n",
     "    matrix = generate_invertible_matrix(size)\n",
